1999-01-26  Jonathan Blandford  <jrb@redhat.com>

	* gnome-icon-entry.c (gnome_icon_entry_init): Now it looks
	better.  If anyone wanted to make it even cooler, it might be good
	to have it inherit from gtk_button, instead of hbox.
	(show_icon_selection): Also, before I forget, make it
	modal/set_parent if the parent is modal etc.


1999-01-26  Radek Doulik  <rodo@aquarius>

	* gnome-app-helper.h: added some casts to (GdkModifierType) to
	avoid compiler warnings

1999-01-25  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-preferences.c (gnome_preferences_load_custom): Fix.  Put
	the Cache information in the right configuration section.

1999-01-25  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* gnome-init.c (gnome_init_cb): use the setting for "images".

Mon Jan 25 11:08:46 1999  George Lebl  <jirka@5z.com>

	* gnome-dialog.[ch]: remove the default migration patch as it's
	  now in cvs and it was a hack anyhow, I don't break binary
	  compatibility now since I changed the flag in the structure to
	  "gpointer padding"

1999-01-25  Havoc Pennington  <hp@pobox.com>

	* gnome-propertybox.h, gnome-propertybox.c: Rename 
	gnome_property_box_set_state() to
	gnome_property_box_set_modified();
	leave old name for compatibility.

1999-01-25  Federico Mena Quintero  <federico@nuclecu.unam.mx>

	* gnome-popup-menu.c (popup_connect_func): Do not test for the
	callback being NULL here, since it may not work for modal popup menus.
	(popup_marshal_func): Test for the callback being NULL here.
	Misc. indentation fixes.  Please keep indentation consistent if
	you modify a file!

1999-01-25  Nat Friedman  <nat@nat.org>

	* gnome-dentry-edit.c (gnome_dentry_get_name_entry): New function
 	to provide access to the Name GtkEntry widget.
	(gnome_dentry_get_comment_entry): Likewise.
	(gnome_dentry_get_exec_entry): Likewise.
	(gnome_dentry_get_tryexec_entry): Likewise.
	(gnome_dentry_get_doc_entry): Likewise.
	(gnome_dentry_get_icon_entry): Likewise.